--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Frontend Mentor | Advice generator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -14,15 +18,15 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
-
-  Advice #<!-- Advice ID goes here -->
-
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<body class="h-screen flex justify-center items-center m-auto">
+    <main class="text-center flex flex-col items-center justify-between bg-dark-grayish-blue w-[95%] rounded-lg p-2">
+      <h1 id="advice-number" class="txt-neon-green mb-10 mt-10">ADVICE #117</h1>
+      <p id="quote">
+        It is easy to sit up and take notice, what's difficult is getting up and taking action.
+      </p>
+      <img src="images/pattern-divider-mobile.svg" alt="divider" class="mt-10">
+      <button class="rounded-full p-5 bg-neon-green relative" style="top: 40px;"><img src="images/icon-dice.svg" alt="dice" onclick="get_advice()"></button>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
