Desktop Design fineshed

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   </style>
 </head>
 <body class="h-screen flex justify-center items-center m-auto">
-    <main class="text-center flex flex-col items-center justify-between bg-dark-grayish-blue w-[95%] rounded-lg p-2">
+    <main class="text-center flex flex-col items-center justify-between bg-dark-grayish-blue w-[95%] md:w-[600px] rounded-lg p-2">
       <h1 id="advice-number" class="txt-neon-green mb-10 mt-10">ADVICE #117</h1>
       <p id="quote">
         It is easy to sit up and take notice, what's difficult is getting up and taking action.
       </p>
       <img src="images/pattern-divider-mobile.svg" alt="divider" class="mt-10">
-      <button class="rounded-full p-5 bg-neon-green relative" style="top: 40px;"><img src="images/icon-dice.svg" alt="dice" onclick="get_advice()"></button>
+      <button class="rounded-full p-5 bg-neon-green relative" style="top: 40px;"><img src="images/icon-dice.svg" alt="dice" type="button"></button>
     </main>
     <script src="script.js"></script>
 </body>
