--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body class="h-screen flex justify-center items-center m-auto">
-    <main class="text-center flex flex-col items-center justify-between bg-dark-grayish-blue w-[95%] md:w-[600px] rounded-lg p-2">
+    <main class="text-center flex flex-col items-center justify-between bg-dark-grayish-blue w-[95%] md:w-[550px] rounded-xl p-6">
       <h1 id="advice-number" class="txt-neon-green mb-10 mt-10">ADVICE #117</h1>
       <p id="quote">
         It is easy to sit up and take notice, what's difficult is getting up and taking action.
